# LoboForge-LensTrainer

./: .gitignore  COMMERCIAL.md  LICENSE  README.md  pyproject.toml  requirements.txt  train.py  train.sh  training.env.example  training.env.local.example  training.env.runpod.example
configs/: assemble_weights.example.yaml  train_lora_dual_character_24gb.yaml  train_lora_lens_base_24gb.yaml  train_lora_lens_base_48gb.yaml  train_lora_willow_24gb.yaml  train_runpod_gpu.yaml
docs/: OUTREACH-huggingface-lens-discussion.md  OUTREACH-microsoft-lens-issue-body.md  OUTREACH-microsoft-lens.md  PUBLISH-huggingface.md
docs/loras/: README.md  sebastian-jessica-v2.md
huggingface/: README.md  index.html
huggingface/lens-lora-sebastian-jessica-v2/: README.md  civitai.md
lens_trainer/: __init__.py  branding.py  cli.py  config.py  console.py  cuda_env.py  dataset.py  encoding.py  hf_repo.py  lens_patches.py  lora.py  resolution_util.py  sampling.py  scheduler.py  trainer.py  training_env.py
scripts/: _trainer_env.sh  assemble_lens_repo.py  bootstrap.sh  create_huggingface_collection.sh  download_lens_base.sh  hf_auth.sh  hf_login.sh  install_microsoft_lens.sh  open_microsoft_lens_issue.sh  post_huggingface_lens_discussion.py  publish_civitai_lora.py  publish_civitai_lora.sh  publish_huggingface_lora.sh  publish_huggingface_space.sh  quickstart.sh  runpod_env.sh  setup_runpod.sh  train.sh  train_local.sh  train_runpod.sh  verify_gpu_ready.sh
