[project]
name = "lens-trainer-loboforge"
version = "0.1.0"
description = "Config-driven LoRA trainer for Microsoft Lens text-to-image models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm Noncommercial License 1.0.0" }
dependencies = [
    "torch>=2.5.0",
    "accelerate>=1.3.0",
    "diffusers>=0.38.0",
    "transformers>=5.8.0",
    "peft>=0.14.0",
    "einops>=0.8.0",
    "huggingface_hub>=0.28.0",
    "safetensors>=0.5.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "bitsandbytes>=0.45.0",
    "lens @ git+https://github.com/microsoft/Lens.git",
]

[project.scripts]
lens-train = "train:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lens_trainer*"]

[tool.setuptools]
py-modules = ["train"]
